--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200;8..144,300;8..144,400;8..144,500;8..144,600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Tailwind Portfolio</title>
   </head>
-  <body>
-    <h1 class="text-red-500">Yoshino</h1>
+  <body class="font-main">
+    <!-- into section -->
+    <div>
+      <h1 class="text-3xl text-red-500 sm:text-blue-300">Better Design</h1>
+      <!-- navbar -->
+      <nav></nav>
+      <!-- intro content -->
+    </div>
   </body>
 </html>
