--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Tailwind Portfolio</title>
   </head>
-  <body class="font-main">
+  <body class="font-body h-screen">
     <!-- into section -->
-    <div>
-      <h1 class="text-3xl text-red-500 sm:text-blue-300">Better Design</h1>
+    <div class="h-1/2 lg:h-screen bg-gradient-to-t from-indigo-200 relative">
       <!-- navbar -->
-      <nav></nav>
+      <nav class="w-full fixed top-0 bg-darkred z-10">
+        <div class="container mx-auto flex items-center justify-between">
+          <div class="flex items-center gap-2">
+            <img class="w-20" src="./img/logo.png" alt="" />
+            <span class="text-2xl font-bold text-indigo-900 dark:text-white"
+              >Portwind.</span
+            >
+          </div>
+          <div>hello</div>
+          <div>hello</div>
+        </div>
+      </nav>
       <!-- intro content -->
+      <div></div>
     </div>
   </body>
 </html>
