--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="h-1/2 lg:h-screen bg-gradient-to-t from-red-50 relative">
       <!-- navbar -->
       <nav class="w-full fixed top-0 bg-darkred z-10">
-        <div class="container mx-auto flex items-center justify-between">
+        <div class="container mx-auto py-2 flex items-center justify-between">
           <div class="flex items-center gap-2">
-            <img class="w-20" src="./img/logo.png" alt="" />
+            <img class="w-14" src="./img/logo.png" alt="" />
             <span class="text-2xl font-bold text-stone-50">YOSHINO.</span>
           </div>
           <ul
@@ -51,7 +51,7 @@
               d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
             />
           </svg>
-          <div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-20 ">
+          <div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-20">
             <div class="w-6 h-0.5 bg-black"></div>
             <div class="w-6 h-0.5 bg-black"></div>
             <div class="w-6 h-0.5 bg-black"></div>
@@ -79,6 +79,12 @@
         </div>
       </nav>
       <!-- intro content -->
+      <!-- image -->
+      <img
+        src="./img/girl.png"
+        alt=""
+        class="absolute bottom-0 right-0 lg:left-0 mx-auto h-5/6 object-cover"
+      />
       <div></div>
     </div>
     <script src="./app.js"></script>
