--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- navbar -->
       <nav class="w-full fixed top-0 bg-darkred z-10">
         <div class="container mx-auto py-2 flex items-center justify-between">
-          <div class="flex items-center gap-2">
+          <div class="flex items-center gap-x-6">
             <img class="w-14" src="./img/logo.png" alt="" />
             <span class="text-2xl font-bold text-stone-50">YOSHINO.</span>
           </div>
@@ -81,11 +81,21 @@
       <!-- intro content -->
       <!-- image -->
       <img
-        src="./img/girl.png"
+        src="./img/check.png"
         alt=""
         class="absolute bottom-0 right-0 lg:left-0 mx-auto h-5/6 object-cover"
       />
-      <div></div>
+      <!-- circle -->
+      <div
+        class="hidden lg:block absolute -bottom-36 right-0 left-0 mx-auto w-big h-big bg-lightgreen rounded-full -z-10"
+      ></div>
+      <!-- animated text -->
+      <div
+        class="absolute top-1/3 left-5 text-2xl sm:left-10 sm:text-5xl md:left-1/4 md:text-7xl lg:left-6 xl:left-48 xl:text-8xl font-normal"
+      >
+        <span class="text-gray-600">Frontend</span>
+        <p id="text" class="text-darkred">Developer</p>
+      </div>
     </div>
     <script src="./app.js"></script>
   </body>
