--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <img
         src="./img/check.png"
         alt=""
-        class="absolute bottom-0 right-0 lg:left-0 mx-auto h-5/6 object-cover"
+        class="absolute bottom-0 right-20 lg:left-0 mx-auto h-5/6 object-cover"
       />
       <!-- circle -->
       <div
@@ -91,12 +91,29 @@
       ></div>
       <!-- animated text -->
       <div
-        class="absolute top-1/3 left-5 text-2xl sm:left-10 sm:text-5xl md:left-1/4 md:text-7xl lg:left-6 xl:left-48 xl:text-8xl font-normal"
+        class="absolute top-1/3 left-5 text-2xl sm:left-10 sm:text-5xl md:left-1/4 md:text-7xl lg:left-5 xl:left-48 xl:text-8xl font-normal"
       >
         <span class="text-gray-600">Frontend</span>
-        <p id="text" class="text-darkred">Developer</p>
+        <p id="text" class="text-darkred"></p>
+      </div>
+      <!-- texts -->
+      <div
+        class="hidden lg:flex flex-col gap-5 rounded-md shadow-lg absolute top-20 bottom-0 m-auto right-8 bg-white dark:bg-smokypink dark:shadow-slate-600 p-6 h-fit w-1/3"
+      >
+        <h1 class="text-4xl text-white">Hi, I'm Yoshino</h1>
+        <p class="text-gray-50 ">
+          Coding since 2019 with 2 years of internship experience in japanese company while attending university.
+        </p>
+        <a
+          class="bg-smokygreen hover:bg-lightgreen  text-white text-xl px-3 py-2 rounded-md font-semibold w-fit"
+          href="#contact"
+          >Hire Me ?</a
+        >
       </div>
     </div>
+    </div>
+    </div>
     <script src="./app.js"></script>
+    <script src="./typing.js"></script>
   </body>
 </html>
