--- a/index.html
+++ b/index.html
@@ -113,37 +113,37 @@
       </div>
     </div>
     <!-- about -->
-    <div class="bg-stone-100 h-1/2 w-full lg:h-screen">
+    <div class="bg-stone-50 h-1/2 w-full lg:h-screen">
       <div
-        class="bg-gradient-to-t py-32 from-stone-200 flex flex-col-reverse lg:flex-row items-center gap-10"
+        class="bg-gradient-to-t py-28 from-stone-200 flex flex-col-reverse lg:flex-row items-center gap-10"
       >
         <!--left-->
         <div class="h-full relative ">
-          <img src="./img/girl.png" alt="" class="w-4/5" />
+          <img src="./img/girl.png" alt="" class="w-4/5 lg:pl-20"  />
         </div>
         <!--right-->
-        <div class="my-auto flex flex-col gap-3">
-          <h1 class="text-indigo-600 font-bold">ABOUT ME</h1>
-          <h1 class="text-3xl font-medium dark:text-white">Better Design</h1>
-          <h1 class="text-3xl font-medium dark:text-white">
+        <div class="my-auto flex flex-col gap-3 lg:-ml-16 ml-6">
+          <h1 class="text-darkred font-bold">ABOUT ME</h1>
+          <h1 class="text-3xl font-medium text-smokygreen ">Better Design</h1>
+          <h1 class="text-3xl font-medium text-smokygreen ">
             Better Experience
           </h1>
-          <p class="text-gray-400">
+          <p class="text-gray-500">
             I design and build digital products. I'm also a multi-disciplinary
             maker with over 10 years of experiences in wide range of design
             disciplines.
           </p>
-          <h2 class="text-gray-400 font-medium">HTML</h2>
+          <h2 class="text-gray-500 font-normal">HTML</h2>
           <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-full bg-indigo-600 h-1.5 rounded-md"></div>
+            <div class="w-full bg-darkred h-1.5 rounded-md"></div>
           </div>
-          <h2 class="text-gray-400 font-medium">Javascript</h2>
+          <h2 class="text-gray-500 font-normal">Javascript</h2>
           <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-4/6 bg-indigo-600 h-1.5 rounded-md"></div>
+            <div class="w-4/6 bg-darkred h-1.5 rounded-md"></div>
           </div>
-          <h2 class="text-gray-400 font-medium">React</h2>
+          <h2 class="text-gray-500 font-normal">React</h2>
           <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-5/6 bg-indigo-600 h-1.5 rounded-md"></div>
+            <div class="w-5/6 bg-darkred h-1.5 rounded-md"></div>
           </div>
         </div>
       </div>
