service sec DONE

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200;8..144,300;8..144,400;8..144,500;8..144,600&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Emoji:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" />
     <title>Tailwind Portfolio</title>
   </head>
   <body class="font-body h-screen">
     <!-- into section -->
-    <div class="h-1/2 lg:h-screen bg-gradient-to-t from-red-50 relative">
+    <div class="h-1/2 lg:h-screen bg-gradient-to-t from-red-50 relative overflow-hidden">
       <!-- navbar -->
       <nav class="w-full fixed top-0 bg-darkred z-10">
         <div class="container mx-auto py-2 flex items-center justify-between">
@@ -113,41 +114,113 @@
       </div>
     </div>
     <!-- about -->
-    <div class="bg-stone-50 h-1/2 w-full lg:h-screen">
       <div
-        class="bg-gradient-to-t py-28 from-stone-200 flex flex-col-reverse lg:flex-row items-center gap-10"
+        class="bg-gradient-to-t py-16 from-stone-200 flex flex-col-reverse lg:flex-row items-center gap-10"
       >
         <!--left-->
         <div class="h-full relative ">
-          <img src="./img/girl.png" alt="" class="w-4/5 lg:pl-20"  />
+          <img src="./img/girl.png" alt="" class="w-4/5 mx-auto" />
         </div>
         <!--right-->
-        <div class="my-auto flex flex-col gap-3 lg:-ml-16 ml-6">
-          <h1 class="text-darkred font-bold">ABOUT ME</h1>
-          <h1 class="text-3xl font-medium text-smokygreen ">Better Design</h1>
-          <h1 class="text-3xl font-medium text-smokygreen ">
+        <div class="my-auto flex flex-col gap-3 ml-10 lg:mr-20 lg:ml-0">
+          <h1 class="text-darkred font-nomal text-5xl mb-5">ABOUT ME</h1>
+          <h1 class="text-2xl font-medium text-smokygreen ">Better Design</h1>
+          <h1 class="text-2xl font-medium text-smokygreen ">
             Better Experience
           </h1>
-          <p class="text-gray-500">
-            I design and build digital products. I'm also a multi-disciplinary
-            maker with over 10 years of experiences in wide range of design
-            disciplines.
+          <p class="text-gray-500 mb-5 mt-5">
+            Now I 'm a frontend developer with a wide range of academic backgrounds,
+            <br>a passion for user experience and interaction design, and strong creative and strategic thinking.
           </p>
-          <h2 class="text-gray-500 font-normal">HTML</h2>
+          <h2 class="text-gray-500 font-semibold">Basic Frontend Languages</h2>
           <div class="w-full bg-gray-200 h-1.5 rounded-md">
             <div class="w-full bg-darkred h-1.5 rounded-md"></div>
           </div>
-          <h2 class="text-gray-500 font-normal">Javascript</h2>
+          <h2 class="text-gray-500 font-semibold">Basic Backend Languages</h2>
           <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-4/6 bg-darkred h-1.5 rounded-md"></div>
+            <div class="w-9/12 bg-darkred h-1.5 rounded-md"></div>
           </div>
-          <h2 class="text-gray-500 font-normal">React</h2>
+          <h2 class="text-gray-500 font-semibold">React</h2>
           <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-5/6 bg-darkred h-1.5 rounded-md"></div>
+            <div class="w-11/12 bg-darkred h-1.5 rounded-md"></div>
           </div>
         </div>
       </div>
+    </div>
+    <!-- services -->
+    <div id="services" class="bg-bggreen">
+      <div class="container mx-auto">
+        <!-- top -->
+        <div class="flex flex-col gap-3 items-center">
+          <h1 class="text-white font-nomal text-7xl mt-16 mb-3">SERVICES</h1>
+          <h1 class="text-3xl text-gray-300">What do I offer?</h1>
+          <p class="w-1/2 text-center text-gray-300">
+            My approach to website design is to create a website that
+            strengthens your company’s brand while ensuring ease of use and
+            simplicity for your audience.
+          </p>
+        </div>
+        <!-- bottom -->
+        <div class="flex flex-wrap justify-between">
+          <!-- card -->
+          <div class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
+            <p class="font-icon text-gray-500 text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-lightpink">UX / UI Design</h1>
+            <p class="text-gray-500 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-smokypink font-medium text-md" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-3/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
+            <p class="font-icon text-gray-500 text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-lightpink">UX / UI Design</h1>
+            <p class="text-gray-500 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-smokypink font-medium text-md" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
+            <p class="font-icon text-gray-500 text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-lightpink">UX / UI Design</h1>
+            <p class="text-gray-500 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-smokypink font-medium text-md" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-3/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
+            <p class="font-icon text-gray-500 text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-lightpink">UX / UI Design</h1>
+            <p class="text-gray-500 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-smokypink font-medium text-md" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
+            <p class="font-icon text-gray-500 text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-lightpink">UX / UI Design</h1>
+            <p class="text-gray-500 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-smokypink font-medium text-md" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
+            <p class="font-icon text-gray-500 text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-lightpink">UX / UI Design</h1>
+            <p class="text-gray-500 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-smokypink font-medium text-md" href=""
+            >Read More</a>
+          </div>
+        </div>
       </div>
+
+
     </div>
     <script src="./app.js"></script>
     <script src="./typing.js"></script>
