--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
           <h1 class="text-white font-nomal text-7xl mt-16 mb-3">SERVICES</h1>
           <h1 class="text-3xl text-gray-300">What do I offer?</h1>
           <p class="w-1/2 text-center text-gray-300">
-            My approach to website design is to create a website that
-            strengthens your company’s brand while ensuring ease of use and
-            simplicity for your audience.
+            My approach to website design is that it is best to create something that is easy and simple for users to use, while at the same time allowing the company's brand and values to be felt through the website.
           </p>
         </div>
         <!-- bottom -->
@@ -169,7 +167,7 @@
             <p class="text-gray-500 text-center">
             I specialize in creating interactive websites for individuals and
             small businesses.</p>
-            <a class="text-smokypink font-medium text-md" href=""
+            <a class="text-smokypink font-medium text-md hover:text-darkred" href=""
             >Read More</a>
           </div>
           <div class="w-full md:w-3/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
@@ -178,7 +176,7 @@
             <p class="text-gray-500 text-center">
             I specialize in creating interactive websites for individuals and
             small businesses.</p>
-            <a class="text-smokypink font-medium text-md" href=""
+            <a class="text-smokypink font-medium text-md hover:text-darkred" href=""
             >Read More</a>
           </div>
           <div class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
@@ -187,7 +185,7 @@
             <p class="text-gray-500 text-center">
             I specialize in creating interactive websites for individuals and
             small businesses.</p>
-            <a class="text-smokypink font-medium text-md" href=""
+            <a class="text-smokypink font-medium text-md hover:text-darkred" href=""
             >Read More</a>
           </div>
           <div class="w-full md:w-3/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
@@ -196,7 +194,7 @@
             <p class="text-gray-500 text-center">
             I specialize in creating interactive websites for individuals and
             small businesses.</p>
-            <a class="text-smokypink font-medium text-md" href=""
+            <a class="text-smokypink font-medium text-md hover:text-darkred" href=""
             >Read More</a>
           </div>
           <div class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
@@ -205,7 +203,7 @@
             <p class="text-gray-500 text-center">
             I specialize in creating interactive websites for individuals and
             small businesses.</p>
-            <a class="text-smokypink font-medium text-md" href=""
+            <a class="text-smokypink font-medium text-md hover:text-darkred" href=""
             >Read More</a>
           </div>
           <div class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-8 flex flex-col gap-3 bg-stone-200 items-center">
@@ -214,14 +212,104 @@
             <p class="text-gray-500 text-center">
             I specialize in creating interactive websites for individuals and
             small businesses.</p>
-            <a class="text-smokypink font-medium text-md" href=""
+            <a class="text-smokypink font-medium text-md hover:text-darkred" href=""
             >Read More</a>
           </div>
         </div>
       </div>
-
-
     </div>
+    <!-- works -->
+    <div id="works" class="bg-gradient-to-t from-red-50">
+      <div class="container mx-auto">
+        <!-- top -->
+        <div class="flex flex-col gap-3 items-center">
+          <h1 class="text-gray-500 font-nomal text-7xl mt-16 mb-3">PORTFOLIO</h1>
+          <h1 class="text-3xl text-smokygreen">Projects</h1>
+          <p class="w-1/2 text-center text-gray-400">
+            I help designers, small agencies and businesses bring their ideas to
+            life. Powered by our creativity and innovation, I turn your requirements
+            into a well-designed websites.
+          </p>
+        </div>
+        <!-- bottom -->
+        <div class="flex flex-wrap justify-between">
+          <!-- card -->
+          <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 p-4 md:my-8 m-1 flex flex-col transition-all hover:scale-110 bg-zinc-400 items-center">
+            <p class="font-icon text-brightgreen text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-red-200 mt-2">UX / UI Design</h1>
+            <p class="text-gray-100 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-darkgreen font-light text-sm hover:text-gray-100 mt-3" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 p-4 md:my-8 m-1 flex flex-col transition-all hover:scale-110 bg-zinc-400 items-center">
+            <p class="font-icon text-brightgreen text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-red-200 mt-2">UX / UI Design</h1>
+            <p class="text-gray-100 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-darkgreen font-light text-sm hover:text-gray-100 mt-3" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 p-4 md:my-8 m-1 flex flex-col transition-all hover:scale-110 bg-zinc-400 items-center">
+            <p class="font-icon text-brightgreen text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-red-200 mt-2">UX / UI Design</h1>
+            <p class="text-gray-100 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-darkgreen font-light text-sm hover:text-gray-100 mt-3" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 p-4 md:my-8 m-1 flex flex-col transition-all hover:scale-110 bg-zinc-400 items-center">
+            <p class="font-icon text-brightgreen text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-red-200 mt-2">UX / UI Design</h1>
+            <p class="text-gray-100 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-darkgreen font-light text-sm hover:text-gray-100 mt-3" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 p-4 md:my-8 m-1 flex flex-col transition-all hover:scale-110 bg-zinc-400 items-center">
+            <p class="font-icon text-brightgreen text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-red-200 mt-2">UX / UI Design</h1>
+            <p class="text-gray-100 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-darkgreen font-light text-sm hover:text-gray-100 mt-3" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 p-4 md:my-8 m-1 flex flex-col transition-all hover:scale-110 bg-zinc-400 items-center">
+            <p class="font-icon text-brightgreen text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-red-200 mt-2">UX / UI Design</h1>
+            <p class="text-gray-100 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-darkgreen font-light text-sm hover:text-gray-100 mt-3" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 p-4 md:my-8 m-1 flex flex-col transition-all hover:scale-110 bg-zinc-400 items-center">
+            <p class="font-icon text-brightgreen text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-red-200 mt-2">UX / UI Design</h1>
+            <p class="text-gray-100 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-darkgreen font-light text-sm hover:text-gray-100 mt-3" href=""
+            >Read More</a>
+          </div>
+          <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 p-4 md:my-8 m-1 flex flex-col transition-all hover:scale-110 bg-zinc-400 items-center">
+            <p class="font-icon text-brightgreen text-4xl">🙆</p>
+            <h1 class="font-medium text-xl text-red-200 mt-2">UX / UI Design</h1>
+            <p class="text-gray-100 text-center">
+            I specialize in creating interactive websites for individuals and
+            small businesses.</p>
+            <a class="text-darkgreen font-light text-sm hover:text-gray-100 mt-3" href=""
+            >Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="./app.js"></script>
     <script src="./typing.js"></script>
   </body>
